Hopefully fixed menu collapse not working and some more style improvements.

--- a/static/index.css
+++ b/static/index.css
@@ -158,6 +158,7 @@ h4 {
   margin-top: 23px;
   margin-bottom: 23px;
 }
+  
 
 #form-header {
     padding-bottom: 5px;
@@ -427,7 +428,7 @@ img.icon.clipboard:active {
   
 @media (min-width: 480px) {
     .navbar-nav {
-      margin: 20px 0;
+      margin: 15px 0;
     }
 }
   
@@ -442,7 +443,7 @@ img.icon.clipboard:active {
     }
 }
   
-  @media (max-width: 991px) {
+@media (max-width: 991px) {
     body {
         padding-top: 0;
     }
@@ -453,7 +454,6 @@ img.icon.clipboard:active {
         display: none;
     }
 }
-  
   
 @media (max-width: 45em) {
     .footer-links {
